Buen enlace sin trolleos del joel

--- a/react/index.html
+++ b/react/index.html
@@ -25,9 +25,9 @@
   <!-- OWA Tracking Code -->
 <script type="text/javascript">
   //<![CDATA[
-  var owa_baseUrl = 'https://projecte-geo-react-o410jc165-joeel03.vercel.app/';
+  var owa_baseUrl = 'https://projecte-geo-react.vercel.app/';
   var owa_cmds = owa_cmds || [];
-  owa_cmds.push(['setSiteId', 'c1dcc0420cb67644499dde5686885b02']);
+  owa_cmds.push(['setSiteId', '194d399a4e5b999d662d506f05c96df3']);
   owa_cmds.push(['trackPageView']);
   owa_cmds.push(['trackClicks']);
   owa_cmds.push(['trackDomStream']);
