--- a/react/index.html
+++ b/react/index.html
@@ -23,24 +23,26 @@
   <!-- End Matomo Code -->
 
   <!-- OWA Tracking Code -->
+<!-- Start Open Web Analytics Tracker -->
 <script type="text/javascript">
   //<![CDATA[
-  var owa_baseUrl = 'https://projecte-geo-react.vercel.app/';
+  var owa_baseUrl = 'https://m06m07.insjoaquimmir.cat/owa/';
   var owa_cmds = owa_cmds || [];
   owa_cmds.push(['setSiteId', '194d399a4e5b999d662d506f05c96df3']);
   owa_cmds.push(['trackPageView']);
   owa_cmds.push(['trackClicks']);
-  owa_cmds.push(['trackDomStream']);
   
   (function() {
-  var _owa = document.createElement('script'); _owa.type = 'text/javascript'; _owa.async = true;
-  owa_baseUrl = ('https:' == document.location.protocol ? window.location.protocol + '//' + owa_baseUrl.replace(/^http:/, 'https:') : owa_baseUrl);
-  _owa.src = owa_baseUrl + 'modules/base/js/owa.tracker-combined-min.js';
-  var _s = document.getElementsByTagName('script')[0]; _s.parentNode.insertBefore(_owa, _s);
+      var _owa = document.createElement('script'); _owa.type = 'text/javascript'; _owa.async = true;
+      owa_baseUrl = ('https:' == document.location.protocol ? window.owa_baseSecUrl || owa_baseUrl.replace(/http:/, 'https:') : owa_baseUrl );
+      _owa.src = owa_baseUrl + 'modules/base/dist/owa.tracker.js';
+      var _owa_s = document.getElementsByTagName('script')[0]; _owa_s.parentNode.insertBefore(_owa, _owa_s);
   }());
   //]]>
   </script>
-  <!-- End OWA Tracking Code -->
+  <!-- End Open Web Analytics Code -->
+  
+          
   
   <title>Vite + React</title>
 </head>
